--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "webpack": "^1.13.0"
+  },
+  "dependencies": {
+    "jquery": "^2.2.3",
+    "jquery-ui": "^1.10.5"
   }
 }
