--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.7.7",
+    "babel-core": "^6.9.0",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.9.0",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "node-sass": "^3.7.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.1"
   },
   "dependencies": {
-    "jquery": "^2.2.3",
+    "jquery": "^2.2.4",
     "jquery-ui": "^1.10.5"
   }
 }
