--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "build:watch": "webpack --watch",
+    "build:watch": "webpack --watch --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
